style.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');

:root {
  --font-primary: 'Quicksand', sans-serif;
  --font-secondary: 'Cormorant Infant', sans-serif;
  --dark: rgb(0, 0, 0);
  --dark100: rgba(0, 0, 0, .8);
  --dark200: rgba(0, 0, 0, .4);
  --dark300: rgba(0, 0, 0, .15);
  --dark400: rgba(0, 0, 0, .075);
  --light: rgb(255, 255, 255);
  --light100: rgba(255, 255, 255, .8);
  --light200: rgba(255, 255, 255, .4);
  --light300: rgba(255, 255, 255, .10);
  --light400: rgba(255, 255, 255, .05);
}


/* Typefaces */

.f-display {
  font-family: var(--font-primary);
  font-size: 4rem;
  font-weight: 900;
  line-height: 1.1;
}

.f-header-1 {
  font-family: var(--font-primary);
  font-size: 2.25rem;
  font-weight: 800;
}

.f-paragraph-1 {
  font-family: var(--font-primary);
  font-size: 1.6rem;
  font-weight: 400;
}

.f-paragraph-2 {
  font-family: var(--font-primary);
  font-size: 1.125rem;
  font-weight: 400;
}


/* Main CSS */

* {
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  scrollbar-color: var(--light300) var(--dark);
}

::-webkit-scrollbar {
  background-color: var(--dark);
}

::-webkit-scrollbar-thumb {
  background-color: var(--light300);
}

*:focus,
*:focus-within,
*:focus-visible,
*:active {
  outline: none;
}

ul,
li {
  list-style-type: none;
}

button {
  background-color: transparent;
  border: none;
  cursor: pointer;
  user-select: none;
}

a {
  text-decoration: none;
  cursor: pointer;
  display: block;
  user-select: none;
  color: var(--light);
}

html {
  font-size: clamp(12px, 2vw, 16px);
  line-height: 1.4;
}

html,
body {
  width: 100%;
  height: 100%;
  overflow: hidden;
  user-select: none;
}

.root {
  width: 100%;
  height: 100%;
  background-color: var(--dark);
  color: var(--light);
  overflow: auto;
  scroll-behavior: smooth;
}

.app {
  width: 100%;
  height: auto;
  margin: auto;
}

/* Container */

.container {
  width: 100%;
  height: auto;
  margin: auto;
}

.textarea[contenteditable]:empty::before {
  content: "Write something...";
  color: var(--light200);
}

.textarea {
  display: block;
  color: var(--light100);
  width: 100vw;
  height: 100vh;
  padding: 20%;
  padding-top: 13%;
  padding-bottom: 5%;
  cursor: text;
  overflow-wrap: break-word;
}

